fix(_custom.scss): make wpcf7 response visible

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1506,3 +1506,12 @@ footer .secondary-links a {
     }
   }
 }
+
+
+/*
+ * WPCF7 styles
+ */
+.wpcf7-response-output {
+  margin-top: 2rem;
+  color: $white;
+}
